Add People razor page
Additional Changes:
- DB communication
- Client-side validation

--- a/Housing21UI/appsettings.json
+++ b/Housing21UI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "UserInformationDB": "Server=localhost\\SQLEXPRESS;Database=UserInformationDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
